[gd_scene load_steps=5 format=3 uid="uid://cv7a5h842ktj"]

[ext_resource type="Script" path="res://src/pincode_door.gd" id="1_fbodr"]
[ext_resource type="Script" path="res://src/canvas_layer.gd" id="1_r6tje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jk0w5"]
size = Vector2(38, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijufi"]
size = Vector2(91, 128)

[node name="PincodeDoor" type="StaticBody2D"]
script = ExtResource("1_fbodr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -19.0
offset_top = -140.0
offset_right = 21.0
offset_bottom = 1.0
color = Color(0.0164224, 0.0186663, 0.105526, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -67.5)
shape = SubResource("RectangleShape2D_jk0w5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("1_r6tje")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 89.0
offset_top = 138.0
offset_right = 397.0
offset_bottom = 517.0
color = Color(0.466181, 0.466181, 0.466181, 1)

[node name="Button" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 23.0
offset_top = 94.0
offset_right = 74.0
offset_bottom = 141.0
text = "1"

[node name="Button2" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 127.0
offset_top = 94.0
offset_right = 178.0
offset_bottom = 141.0
text = "2"

[node name="Button3" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 231.0
offset_top = 94.0
offset_right = 282.0
offset_bottom = 141.0
text = "3"

[node name="Button4" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 23.0
offset_top = 182.0
offset_right = 74.0
offset_bottom = 229.0
text = "4"

[node name="Button5" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 127.0
offset_top = 182.0
offset_right = 178.0
offset_bottom = 229.0
text = "5"

[node name="Button6" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 231.0
offset_top = 182.0
offset_right = 282.0
offset_bottom = 229.0
text = "6"

[node name="Button7" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 23.0
offset_top = 246.0
offset_right = 74.0
offset_bottom = 293.0
text = "7"

[node name="Button8" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 126.0
offset_top = 247.0
offset_right = 177.0
offset_bottom = 294.0
text = "8"

[node name="Button9" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 231.0
offset_top = 246.0
offset_right = 282.0
offset_bottom = 293.0
text = "9"

[node name="Button10" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 127.0
offset_top = 326.0
offset_right = 178.0
offset_bottom = 373.0
text = "0"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 97.0
offset_top = 137.0
offset_right = 408.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 50
text = "0000000000"
horizontal_alignment = 1

[node name="clear" type="Button" parent="CanvasLayer"]
offset_left = 112.0
offset_top = 458.0
offset_right = 163.0
offset_bottom = 508.0
text = "C"

[node name="ok" type="Button" parent="CanvasLayer"]
offset_left = 319.0
offset_top = 458.0
offset_right = 370.0
offset_bottom = 508.0
text = "Ok
"

[node name="pin" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pin"]
position = Vector2(-0.5, -54)
shape = SubResource("RectangleShape2D_ijufi")

[connection signal="pressed" from="CanvasLayer/clear" to="CanvasLayer" method="_on_clear_pressed"]
[connection signal="pressed" from="CanvasLayer/ok" to="." method="_on_ok_pressed"]
[connection signal="area_entered" from="pin" to="." method="_on_pin_area_entered"]
[connection signal="area_exited" from="pin" to="." method="_on_pin_area_exited"]
